fixed bug preventing anchors loading on mobile

--- a/css/global.css
+++ b/css/global.css
@@ -49,7 +49,7 @@ ul {
   top: 0;
   left: 0;
   padding: 10px 0 0 10px;
-  min-height: 330px;
+  min-height: 25em;
   z-index: 3;
 }
 
@@ -145,7 +145,7 @@ ul {
   font-weight: 900;
   font-size: 12px;
   color: #ccc;
-  position: fixed;
+  position: absolute;
   bottom: 15px;
   left: 122px;
 }
@@ -261,42 +261,44 @@ h1 {
 #polaroid1 {
   top: 0px;
   left: 270px;
-  -moz-transform: rotate(-20deg);
-  -ms-transform: rotate(-20deg);
-  -webkit-transform: rotate(-20deg);
-  transform: rotate(-20deg);
+  -moz-transform: rotate(-16deg);
+  -ms-transform: rotate(-16deg);
+  -webkit-transform: rotate(-16deg);
+  transform: rotate(-16deg);
   box-shadow: 2px 3px 8px rgba(0,0,0,.2);
 }
 #polaroid1 > div {
-background-image: url(https://farm4.staticflickr.com/3879/14577245950_cebd063f2e_m.jpg);
-background-position-x: -50px;
+	background-image: url(https://farm4.staticflickr.com/3750/12883180613_518b8f8556_m.jpg);
+background-position-x: -20px;
+
+
 }
 #polaroid2 {
   top: 100px;
   left: 300px;
-  -moz-transform: rotate(22deg);
-  -ms-transform: rotate(22deg);
-  -webkit-transform: rotate(22deg);
-  transform: rotate(22deg);
+  -moz-transform: rotate(28deg);
+  -ms-transform: rotate(28deg);
+  -webkit-transform: rotate(28deg);
+  transform: rotate(28deg);
   box-shadow: 3px 1px 9px rgba(0,0,0,.2);
 }
 #polaroid2 > div {
-	  background-image: url(https://farm4.staticflickr.com/3880/14400525293_0dbdb096bf_m.jpg);
-background-position-x: -90px;
+background-image: url(https://farm4.staticflickr.com/3893/14377029481_2a578e5f35_m.jpg);
+background-position-x: -20px;
 }
 
 #polaroid3 {
   top: 200px;
   left: 50px;
-  -moz-transform: rotate(40deg);
-  -ms-transform: rotate(40deg);
-  -webkit-transform: rotate(40deg);
-  transform: rotate(40deg);
+  -moz-transform: rotate(-35deg);
+  -ms-transform: rotate(-35deg);
+  -webkit-transform: rotate(-35deg);
+  transform: rotate(-35deg);
   box-shadow: 2px 2px 6px rgba(0,0,0,.2);
 }
 #polaroid3 > div {
-background-image: url(https://farm4.staticflickr.com/3893/14377029481_2a578e5f35_m.jpg);
-background-position-x: -20px;
+	background-image: url(https://farm8.staticflickr.com/7325/9654447585_6158104e56_m.jpg);
+background-position-x: -28px;
 }
 a.extern {
   color: #007095;
@@ -360,7 +362,7 @@ a.extern:visited {
   color: #545D5F;
 }
 
-#reviews-clear {
+#review-list {
   position: absolute;
   z-index: 2;
   background-color: white;
@@ -619,7 +621,7 @@ to {
     background-color: transparent;
     color: white !important;
     position: relative;
-    padding: 10px 15px;
+    padding: 5px 15px;
     border-right: none;
     font-weight: 700;
     border: none;
@@ -705,6 +707,7 @@ to {
     left: 0;
   }
   .info-page {
+  	width: 100%;
     left: 0;
     top: 0;
   }
@@ -725,7 +728,7 @@ to {
     height: 100%;
     padding-top: 50px;
   }
-  #reviews-clear {
+  #review-list, .aboutme {
     width: 100%;
   }
   .review-quote {
@@ -733,7 +736,7 @@ to {
     float: none;
   }
 
-  #reviews-clear .review .review-img {
+  #review-list .review .review-img, .circle-portrait {
     text-align: center;
     width: 200px;
     height: 200px;
@@ -745,6 +748,8 @@ to {
     float: none;
     margin-top: 15px;
   }
+  
+  
 
 }
 
